@@ -8,6 +8,7 @@
  replaces existing separators in the query
 -new aliases: url_encode, url_decode (credit: bluefeet)
 -new module: URI::Fast::Test to make unit testing with Test2 easier (credit: merlyn)
+-bugfix: set_query, set_fragment, set_path unnecessarily encode permitted characters
 
 0.34 2018-06-13
 -bugfix: set_param could clobber existing query parameters (credit: aeruder)
